# IvenaMeet

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
apps/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  styles.css
apps/frontend/src/components/: ChatPanel.tsx  Layout.tsx  MainStage.tsx  Sidebar.tsx  mucha-primitives.tsx
apps/frontend/src/components/chat/: ChatMessageRow.tsx
apps/frontend/src/lib/: api.ts  avatar.ts  chat.ts  env.ts  theme.ts  types.ts
data/: app.db
deploy/cron/: cleanup-orphan-avatars.cron  rotate-admin-token.cron
deploy/env/: frontend.env.example
deploy/systemd/: deploy.sh  install.sh  ivena-meet-control-plane.service  ivena-meet-frontend.service
docs/: admin-token-ops.md  agent-native-backend-design.md  config-dictionary.md  system-interface-overview.md
scripts/: bootstrap-host  bootstrap-host.sh  cleanup-orphan-avatars.sh  init-db.sh  rotate-admin-token.sh
skills/ivena-agent-api/: SKILL.md
skills/ivena-agent-api/agents/: openai.yaml
skills/ivena-agent-api/references/: endpoints.md
src/: app.rs  config.rs  error.rs  main.rs  request_meta.rs  state.rs  validation.rs
src/middleware/: admin_auth.rs  control_auth.rs  http_trace.rs  mod.rs  request_id.rs
src/routes/: agent.rs  auth.rs  broadcast.rs  chat.rs  health.rs  host_login.rs  invite.rs  mod.rs  moderation.rs  room.rs  session.rs  user.rs
src/routes/agent/: auth.rs  context.rs  events.rs  mod.rs  types.rs  utils.rs
src/routes/agent/commands/: issue_invite.rs  mod.rs  refresh_session.rs  send_message.rs
src/services/: host_auth.rs  invite.rs  livekit.rs  mod.rs  presence.rs  rate_limit.rs  session.rs  stage_permission.rs  storage.rs
(+5 files in other folders)
